[package]
name = "tea-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }


[dependencies]
crossbeam-channel = { workspace = true }
crossbeam = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
bincode = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
impl-trait-for-tuples = { workspace = true }

tea-codec-macros = { version = "0.3.0-dev.1", path = "macros" }

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.lazy_static]
version = "1.4"
optional = true

[dev-dependencies]
structopt = "0.3.12"
serde_json = "1.0.50"

[features]
default = []
runtime = ["tokio", "lazy_static"]
backtrace = []
checked = []
