[package]
name = "vmh-codec"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0"
serde_yaml = "0.8.14"
strum = { workspace = true }
strum_macros = { workspace = true }
prost = "0.11.0"
num_enum = "0.5.1"
thiserror = "1.0"
chrono = { workspace = true }
hex = "0.4.2"
clap = { version = "3.1.3", features = ["derive", "env"] }

runtime-codec = { path = "../runtime-codec" }
solc-codec = { path = "../solc-codec" }
tea-codec = { path = "../tea-codec" }
tapp-common = { path = "../tapp-common" }
actor-txns = { path = "../actor-txns" }

[dev-dependencies]
anyhow = "1.0"

[build-dependencies]
prost-build = "0.11.1"

[features]
default = []
nitro = []
simulator = []
__test = ["simulator"]
