[package]
name = "tea-vmh-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0"
serde_yaml = "0.8.14"
strum = { workspace = true }
strum_macros = { workspace = true }
prost = "0.11.0"
num_enum = "0.5.1"
thiserror = "1.0"
chrono = { workspace = true }
hex = "0.4.2"
clap = { version = "3.1.3", features = ["derive", "env"] }

tea-runtime-codec = { version = "0.2.0-dev.2", path = "../runtime-codec" }
tea-solc-codec = { version = "0.2.0-dev.2", path = "../solc-codec" }
tea-codec = { version = "0.2.0-dev.2", path = "../tea-codec" }
tea-tapp-common = { version = "0.2.0-dev.2", path = "../tapp-common" }
tea-actor-txns = { version = "0.2.0-dev.2", path = "../actor-txns" }

[dev-dependencies]
anyhow = "1.0"

[build-dependencies]
prost-build = "0.11.1"

[features]
default = []
nitro = []
simulator = []
__test = ["simulator"]
