[package]
name = "tea-billing-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.1", path = "../../codecs/tea-codec" }
tea-actorx-core = { version = "0.2.0-dev.1", path = "../../actorx/actorx-core" }

serde = { workspace = true }
