[package]
name = "tea-env-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { path = "../../codecs/tea-codec" }
tea-actorx-core = { path = "../../actorx/actorx-core" }
tea-vmh-codec = { path = "../../codecs/vmh-codec" }
tea-solc-codec = { path = "../../codecs/solc-codec" }

serde = { workspace = true }

[features]
default = []
nitro = []
simulator = []
