[package]
name = "layer1-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { path = "../../codecs/tea-codec" }
tea-actorx-core = { path = "../../actorx/actorx-core" }
tapp-common = { path = "../../codecs/tapp-common" }
solc-codec = { path = "../../codecs/solc-codec" }
actor-txns = { path = "../../codecs/actor-txns" }
tappstore-actor-codec = { path = "../tappstore-actor" }

serde = { workspace = true }
