[package]
name = "tea-layer1-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { path = "../../codecs/tea-codec" }
tea-actorx-core = { path = "../../actorx/actorx-core" }
tea-tapp-common = { path = "../../codecs/tapp-common" }
tea-solc-codec = { path = "../../codecs/solc-codec" }
tea-actor-txns = { path = "../../codecs/actor-txns" }
tea-tappstore-actor-codec = { path = "../tappstore-actor" }

serde = { workspace = true }
