[package]
name = "tea-layer1-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.1", path = "../../codecs/tea-codec" }
tea-actorx-core = { version = "0.2.0-dev.1", path = "../../actorx/actorx-core" }
tea-tapp-common = { version = "0.2.0-dev.1", path = "../../codecs/tapp-common" }
tea-solc-codec = { version = "0.2.0-dev.1", path = "../../codecs/solc-codec" }
tea-actor-txns = { version = "0.2.0-dev.1", path = "../../codecs/actor-txns" }
tea-tappstore-actor-codec = { version = "0.2.0-dev.1", path = "../tappstore-actor" }

serde = { workspace = true }
