[package]
name = "libp2p-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { path = "../../codecs/tea-codec" }
tea-actorx-core = { path = "../../actorx/actorx-core" }
vmh-codec = { path = "../../codecs/vmh-codec" }

serde = { workspace = true }

[features]
default = []
nitro = ["vmh-codec/nitro"]
simulator = ["vmh-codec/simulator"]
__test = ["vmh-codec/__test"]
