[package]
name = "tea-libp2p-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.1", path = "../../codecs/tea-codec" }
tea-actorx-core = { version = "0.2.0-dev.1", path = "../../actorx/actorx-core" }
tea-vmh-codec = { version = "0.2.0-dev.1", path = "../../codecs/vmh-codec" }

serde = { workspace = true }

[features]
default = []
nitro = ["tea-vmh-codec/nitro"]
simulator = ["tea-vmh-codec/simulator"]
__test = ["tea-vmh-codec/__test"]
