[package]
name = "ra-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { path = "../../codecs/tea-codec" }
tea-actorx-core = { path = "../../actorx/actorx-core" }
nitro-actor-codec = { path = "../nitro-actor" }

serde = { workspace = true }
