[package]
name = "tea-replica-service-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-tapp-common = { path = "../../codecs/tapp-common" }
tea-actor-txns = { path = "../../codecs/actor-txns" }
tea-codec = { path = "../../codecs/tea-codec" }
tea-actorx-core = { path = "../../actorx/actorx-core" }

serde = { workspace = true }
