[package]
name = "state-receiver-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tea-codec = { path = "../../codecs/tea-codec" }
tea-actorx-core = { path = "../../actorx/actorx-core" }
tapp-common = { path = "../../codecs/tapp-common" }

serde = { workspace = true }
