[package]
name = "tea-tappstore-actor-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.1", path = "../../codecs/tea-codec" }
tea-actorx-core = { version = "0.2.0-dev.1", path = "../../actorx/actorx-core" }
tea-tapp-common = { version = "0.2.0-dev.1", path = "../../codecs/tapp-common" }
tea-actor-txns = { version = "0.2.0-dev.1", path = "../../codecs/actor-txns" }
tea-solc-codec = { version = "0.2.0-dev.1", path = "../../codecs/solc-codec" }

serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
