[package]
name = "wasm-b-actor"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tea-sdk = { path = "../..", features = ["wasm"] }
test-examples-codec = { path = "../codec" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tea-sdk = { path = "../..", features = ["host"] }
anyhow = { workspace = true }
